--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '2'
 services:
   cups:
+    container_name: cups
     build: .
     privileged: true
     ports:
@@ -8,3 +9,7 @@ services:
     volumes:
       - /var/run/dbus:/var/run/dbus
       - /dev/bus/usb:/dev/bus/usb
+    args:
+      - share-scope
+      - proxy-name:raspberry
+      - admin-password
