--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -1,9 +1,9 @@
-[supervisord]
-nodaemon=true
-user=print
+[supervisord] nodaemon=true
 
 [program:cups]
 command=/usr/sbin/cupsd -f
+redirect_stderr=true
+user=print
 
 [program:gcp]
-command=gcp-cups-connector --log-to-console --config-filename /home/print/gcp-cups-connector.config.json
+command=gcp-cups-connector --log-to-console
