--- a/gcp/Dockerfile
+++ b/gcp/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER kaiwa <github@kawa.in>
 RUN echo "deb http://mirrordirector.raspbian.org/raspbian/ stretch main contrib non-free rpi" >> /etc/apt/sources.list && \
     apt-get update && apt-get install -y -t stretch \
     ca-certificates \
-    ntp \
+    ntpdate \
     google-cloud-print-connector
 
 COPY gcp-init.sh /opt/gcp-init.sh
