--- a/cups/cupsd.conf
+++ b/cups/cupsd.conf
@@ -14,11 +14,14 @@ MaxLogSize 0
 
 # Listen to all
 Port 631
-Listen /var/run/cups/cups.sock
+#Listen /var/run/cups/cups.sock
+Listen localhost:631
 
 # Show shared printers on the local network.
 Browsing On
 BrowseLocalProtocols dnssd
+BrowseAllow ALL
+BrowseOrder allow,deny
 
 # Default authentication type, when authentication is required...
 DefaultAuthType Basic
