added upgrade to dockerfile

--- a/gcp/Dockerfile
+++ b/gcp/Dockerfile
@@ -2,7 +2,7 @@ FROM resin/rpi-raspbian
 MAINTAINER kaiwa <github@kawa.in>
 
 RUN echo "deb http://mirrordirector.raspbian.org/raspbian/ stretch main contrib non-free rpi" >> /etc/apt/sources.list && \
-    apt-get update
+    apt-get update && apt-get upgrade
 
 RUN apt-get install -y -t stretch \
     google-cloud-print-connector
