--- a/gcp/Dockerfile
+++ b/gcp/Dockerfile
@@ -1,8 +1,8 @@
 FROM resin/rpi-raspbian
 MAINTAINER Kuba Kuźma <kuba@jah.pl>
 
-RUN echo "ServerName cups:631/version=1.1" >> /etc/cups/client.conf && \
-    echo "Encryption Never" >> /etc/cups/client.conf && \
+RUN mkdir -p /etc/cups && \
+    echo "ServerName cups:631/version=1.1\nEncryption Never" >> /etc/cups/client.conf && \
     echo "deb http://mirrordirector.raspbian.org/raspbian/ stretch main contrib non-free rpi" >> /etc/apt/sources.list && \
     apt-get update && \
     apt-get upgrade && \
